--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-h1{
+h2{
     text-align: center;
     font-weight: bold;
 }
@@ -66,3 +66,29 @@ body{
       float: none;
     }
   }
+
+footer{
+  background-color: black;
+  color: white;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  /* position: fixed; */
+}
+
+
+.Footer{
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  padding: 10px;
+  text-align: center;
+}
+
+footer ul, li{
+  list-style: none;
+  position: center;
+}
