--- a/style.css
+++ b/style.css
@@ -245,3 +245,52 @@ body{
 .productsButton {
   text-align: center;
 }
+
+.productsButton button{
+  background-color: transparent;
+  border: 1px solid black;
+  box-sizing: border-box;
+  color: #00132C;
+  font-family: "Avenir Next LT W01 Bold",sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  padding: 16px 23px;
+  position: relative;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.productsButton button:hover,
+.productsButton button:active {
+  outline: 0;
+}
+
+.productsButton button:hover {
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.productsButton button:before {
+  background-color: #fff8dc;
+  content: "";
+  height: calc(100% + 3px);
+  position: absolute;
+  right: -7px;
+  top: -9px;
+  transition: background-color 300ms ease-in;
+  width: 100%;
+  z-index: -1;
+}
+
+.productsButton button:hover:before {
+  background-color: lightcoral;
+}
+
+@media (min-width: 768px) {
+  .button-51 {
+    padding: 16px 32px;
+  }
+}
